fix datepicker z-index

--- a/static/css/record.sass
+++ b/static/css/record.sass
@@ -7,3 +7,7 @@ h1
 
 .button-holder button
   margin-bottom: 10px
+
+.ui-datepicker
+  // make sure it's always on the very top
+  z-index: 20000 !important
